Fix vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ img {
   display: inline-block;
   padding: 1em 1em 0;
   margin: 0;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 .box-2 h2 {
